MEAN Stack final

--- a/userStory/public/app/views/pages/home.html
+++ b/userStory/public/app/views/pages/home.html
@@ -27,7 +27,7 @@
 			</div>
 
 			<div class="panel panel-success"> 
-				<div class="panel-body" ng-repeat="each in story.getStories()">
+				<div class="panel-body" ng-repeat="each in allStories">
 					<p>{{each.content}}</p>
 				</div>
 			</div>
